--- a/app/views/stories/_inner_story.html.erb
+++ b/app/views/stories/_inner_story.html.erb
@@ -11,18 +11,19 @@
 			                </p>
 		              </figcaption> -->
 						<% end %>
+						</div>
 						
 							<div class="item-description alt">
 								<%#= render 'stories/started_by' , :story => story%>
 								<h5><%= link_to story.story_title, story%></h5>
 								<%= render 'stories/story_item' , :story => story%>
 							</div>
-							<div class="post-meta">
+							<!-- <div class="post-meta">
 								<span><i class="mini-ico-calendar"></i>1 June 2011</span>
-								<!-- <span><i class="mini-ico-user"></i> <a href="#">lucas</a></span> -->
+								<span><i class="mini-ico-user"></i> <a href="#">lucas</a></span>
 								<span><i class="mini-ico-comment"></i><a href="#">89 comments</a></span>
-							</div>	
-					</div>
+							</div>	 -->
+					
 </div>
 
 				
