--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -8,11 +8,11 @@
 	  	<% else%>
 	  		<%= f.hidden_field :story_id, :value => story.id%>
 		<% end %>
-	  <textarea <%= 'unlogged=1' unless current_user %> rows="20" name="comment[comment]" id="comment_comment" data-function="validateComment" cols="40" class="userFunction" placeholder="Add your comment here..."></textarea>
+	  <textarea <%= 'unlogged=1' unless current_user %> rows="3" name="comment[comment]" id="comment_comment" data-function="validateComment" class="userFunction" placeholder="Add your comment here..."></textarea>
 	  
 	  <% if current_user%>
 		  <div class="actions">
-		    <%= f.submit 'Comment' ,disable_with: 'Please wait...' ,disabled: true %>
+		    <%= f.submit 'Comment' ,disable_with: 'Please wait...' ,disabled: true , class: 'btn btn-small'%>
 		  </div>
 	  <% end %>
 	<% end %>
