--- a/app/views/stories/_like_actions.html.erb
+++ b/app/views/stories/_like_actions.html.erb
@@ -1,11 +1,10 @@
-<div id="like-<%=story.id%>">
-	<div>
-		<% if story.likes.length>0 %>
-		Likes:
-		<a href="<%=like_path(story.id)%>" data-toggle="modal" data-target="#like-modal" class="like-link"><%=story.likes.length%></a>
-		<!--class="userFunction" data-function="likeModal"-->
-		<% end %>
-	</div>
+
+
+<span id="like-<%=story.id%>">
+	<% if story.likes.length>0 %>
+		<span><i class="mini-ico-heart"></i>Likers: <a href="<%=like_path(story.id)%>" data-toggle="modal" data-target="#like-modal" class="like-link"><%=story.likes.length%></a></span>
+	<% end %>
+	<span class="likes">
 	<% if current_user %>
 		<% if current_user.like?(story.id) %>
 			<%= render 'stories/unlike_form' , story: story%>
@@ -13,6 +12,7 @@
 			<%= render 'stories/like_form' , story: story %>
 		<% end %>
 	<% else %>
-		<input type="button" class="btn btn-primary unregistered" value="Like"/>
+		<input type="button" class="btn btn-info unregistered" value="Like"/>
 	<% end %>
-</div>
+	</span>
+</span>
