--- a/app/views/stories/_like_form.html.erb
+++ b/app/views/stories/_like_form.html.erb
@@ -1,5 +1,10 @@
 
 <%= form_for(current_user.likes.build(story_id: story.id) , remote: true) do |f| %>
   <div><%= f.hidden_field :story_id %></div>
-  <%= f.submit "Like", class: "btn btn-large btn-primary" %>
+  <%#= f.submit "Like", class: "btn btn-small btn-info" %>
+  <a class="btn btn-small btn-info btn-like" onclick="$('#like-<%=story.id%> form').submit();">
+  	<i class="mini-ico-heart"></i>Like
+  </a>
+  <%#link_to 'Like', '#like', class: 'btn btn-small btn-info btn-like' ,:onclick=>"$('#like-#{story.id} form').submit()" do%>
+  
 <% end %>
