--- a/app/views/stories/_inner_story.html.erb
+++ b/app/views/stories/_inner_story.html.erb
@@ -15,7 +15,7 @@
 						
 							<div class="item-description alt">
 								<%#= render 'stories/started_by' , :story => story%>
-								<h5><%= link_to story.story_title, story%></h5>
+								<h5 class="story-title"><%= link_to story.story_title, story%></h5>
 								<%= render 'stories/story_item' , :story => story%>
 							</div>
 							<!-- <div class="post-meta">
