--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,6 +20,26 @@ body {
 	span {
 		color: #444;
 	}
+
+	.the-end {
+		text-align:center;
+		border-bottom:2px solid #d5d5d5;
+		height: 25px;
+		h5{
+			display: inline-block;
+			position: relative;
+			top: -3px;
+			margin:15px 0;
+			padding: 0 30px !important;
+		  text-align: center;
+		  color: #7B0202;
+		  font-family: 'Lobster', cursive !important;
+		  font-size: 20px;
+		  text-transform: capitalize;
+		  background-color: #fff;
+		}
+	  
+	}
 	
 }
 
@@ -103,8 +123,8 @@ body {
 
 		.picture {
 			padding:0;
-			/*border:0;
-			box-shadow:0;
+			border:0;
+			/*box-shadow:0;
 			-webkit-box-shadow: 0;*/
 		}
 		.dropcap {
@@ -117,8 +137,12 @@ body {
 		}
 		.item-description {
 			padding: 0;
-			h5 {
-				padding: 5px 0 0 5px;
+			h5.story-title {
+				padding: 5px 0 0 23px;
+				background-color: #434343;
+				a {
+					color:#eee;
+				}
 			}
 			.writers {
 				padding-left: 5px;
@@ -133,12 +157,18 @@ body {
 		.post-meta {
 			margin-top: 0;
 		}
+
+
 	}
 	.comments-dashboard {
 		border: 0;
 	}
 
+
+
+
 }
+
 
 
 /* Comments */
