--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -47,4 +47,5 @@
 <!-- end: Hero Unit -->
 
 <hr>
+<div class="small-logo logo-feed"><i class="mini-ico-list ico-white"></i><div>Stories</div></div>
 			
