--- a/app/views/stories/_like_actions.html.erb
+++ b/app/views/stories/_like_actions.html.erb
@@ -12,7 +12,9 @@
 			<%= render 'stories/like_form' , story: story %>
 		<% end %>
 	<% else %>
-		<input type="button" class="btn btn-info unregistered" value="Like"/>
+	<span class="like-unregistered">
+		<a href="#like" class="btn btn-small btn-info btn-like unregistered">Like</a>
+	</span>
 	<% end %>
 	</span>
 </span>
