--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -331,20 +331,19 @@ ul.commentlist {
 	}
 
 	.widget {
-	padding: 10px;
-	margin-top: 25px;
-	background: #fff;
-	-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.35);
-	   -moz-box-shadow: 0px 1px 1px rgba(0,0,0,.35);
-		    box-shadow: 0px 1px 1px rgba(0,0,0,.35);
+		padding: 10px;
+		margin-top: 25px;
+		background: #fff;
+		-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.35);
+		   -moz-box-shadow: 0px 1px 1px rgba(0,0,0,.35);
+			    box-shadow: 0px 1px 1px rgba(0,0,0,.35);
 	}
 	
-.widget.first {
-	margin-top: -5px;
-	background: #fff;
-	-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.35);
-	   -moz-box-shadow: 0px 1px 1px rgba(0,0,0,.35);
-		    box-shadow: 0px 1px 1px rgba(0,0,0,.35);
+	.widget-first {
+		background: #fff;
+		-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.35);
+		   -moz-box-shadow: 0px 1px 1px rgba(0,0,0,.35);
+			    box-shadow: 0px 1px 1px rgba(0,0,0,.35);
 	}
 
 
