--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -27,7 +27,7 @@
 
 				<!-- start: Popular Photos -->
 				<div class="widget-first">
-					<div class="title"><h3>Popular Photos</h3></div>
+					<div class="title"><h3><%= "#{@story.user.name}'s"%> Stories</h3></div>
 
 					<div class="flickr-widget">
 						<script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=9&display=latest&size=s&layout=x&source=user&user=29609591@N08"></script>
