--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,6 @@
+$background-color :#EDEDEB;
+
+
 body {
 	xfont-family: 'Alike';
 
@@ -60,7 +63,7 @@ hr.clean {
 
 
 #wrapper {
-	background-color:#EDEDEB;
+	background-color:$background-color;
 }
 
 .hero-unit {
@@ -328,6 +331,24 @@ ul.commentlist {
 		-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.35);
 		   -moz-box-shadow: 0px 1px 1px rgba(0,0,0,.35);
 			    box-shadow: 0px 1px 1px rgba(0,0,0,.35);	
+	}
+
+	.story-header {
+		text-align:center;
+		border-bottom:2px solid #666;
+		height: 25px;
+		margin:35px 0 !important;
+
+		h1 {
+			font-family: 'Lobster' !important;
+			background-color: $background-color;
+			display: inline-block;
+			padding: 0 35px;
+		}
+	}
+	.story-title {
+		font-family: 'Atika' !important;
+		padding-left: 25px;
 	}
 
 	.widget {
