--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -24,6 +24,12 @@ hr.clean {
   	border-bottom: 1px solid #f6f6f6;
 }
 
+.btn-small {
+	webkit-border-radius: 14px;
+     -moz-border-radius: 14px;
+          border-radius: 14px;
+}
+
 /* Logos */
 
 .logo ,.small-logo{
@@ -199,9 +205,44 @@ hr.clean {
 		.picture {
 			padding:0;
 			border:0;
+			position: relative;
 			/*box-shadow:0;
 			-webkit-box-shadow: 0;*/
+			/*.image-container{
+				position: absolute;
+				height: 100%;
+				width: 100%;
+				display: table;
+				vertical-align: middle;
+			}*/
+			/*webkit-box-shadow: inset 0 -70px 70px -20px rgba(0, 0, 0, 0.65);
+			-moz-box-shadow: inset 0 -70px 70px -20px rgba(0,0,0,0.65);
+			box-shadow: inset 0 -70px 70px -20px rgba(0, 0, 0, 0.65);*/
+			.title-container {
+				position: relative;
+				div.story-title {
+					position: absolute;
+					padding-left: 20px;
+					/*background-color: rgba(0, 0, 0, 0.35);*/
+					width: 100%;
+					top: -26px;
+					height: 28px;
+					line-height: 28px;
+					webkit-box-shadow: inset 0 -70px 70px -20px rgba(0, 0, 0, 0.65);
+			-moz-box-shadow: inset 0 -70px 70px -20px rgba(0,0,0,0.65);
+			box-shadow: inset 0 -70px 70px -20px rgba(0, 0, 0, 0.65);
+
+					a{
+						font-family: $story-font;
+						font-style: italic;
+						font-size: 15px;
+						color: #eee;
+					}
+				}
+			}
+
 		}
+		
 		
 		.item-description {
 			padding: 0;
@@ -230,6 +271,7 @@ hr.clean {
 	}
 	.comments-dashboard {
 		border: 0;
+		height: 18px;
 	}
 
 
@@ -304,16 +346,13 @@ ul.commentlist {
 
 }
 
-.btn-small, .btn-like, .btn-unlike {
-	webkit-border-radius: 14px;
-     -moz-border-radius: 14px;
-          border-radius: 14px;
-}
-
 .like-unregistered {
 	float:right;
 }
-
+.flag {
+	float:right;
+	margin-right: 5px;
+}
 
 /* Story Page */
 .story-page {
@@ -393,6 +432,10 @@ ul.commentlist {
 	.comment-des {
 			width:90% !important;
 		}
+
+	.comments-dashboard {
+		height: 18px;
+	}
 
 
 
