--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -10,7 +10,7 @@
 		<h2>The Feeders:</h2>
 		<%= render 'stories/big_feeders' ,story: @story%>
 		<h2>Present:</h2>
-		<div class="story-header">
+		<div class="header-hr">
 			<h1><%=@story.story_title%></h1>
 		</div>
 
