--- a/app/views/feeds/_hp_header.html.erb
+++ b/app/views/feeds/_hp_header.html.erb
@@ -47,5 +47,26 @@
 <!-- end: Hero Unit -->
 
 <hr>
-<div class="small-logo logo-feed"><i class="mini-ico-list ico-white"></i><div>Stories</div></div>
+
+<div class="wrapper-hr">
+	<div class="header-hr">
+		<div class="wrapper-logo-feed">
+			<div class="small-logo logo-feed"><div>Stories</div></div>
+		</div>
+	</div>
+</div>
+
+<div class="container">
+<div class="navbar">
+  <div class="navbar-inner">
+    <a class="brand" href="#">Title</a>
+    <ul class="nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Link</a></li>
+      <li><a href="#">Link</a></li>
+    </ul>
+  </div>
+</div>href="#">Link</a></li>
+
+</div>
 			
