--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
     <div class="row">
      <!--start: Logo -->
       <div class="logo span3">
-        <i class="ico-charts circle"></i>
+        <i class="ico-tags circle"></i>
 <%= link_to  content_tag(:span ,'feed') + 'fiction', root_path, id: "logo" , class: "brand" %>
 
         <!-- <a class="brand" href="#">Feed<span>fiction</span></a> -->
@@ -73,12 +73,14 @@
     <!-- <div class="row">
       <%#= render 'layouts/second_navbar'%>
     </div> -->
+    <div class="hr"></div>
   </div>
   <!--end: Container-->     
     
 
 
 </header>
+
 <!--end: Header-->
 <%= yield :home%>
 
