--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -24,6 +24,31 @@ hr.clean {
   	border-bottom: 1px solid #f6f6f6;
 }
 
+.hr {
+	border-top: 1px solid #e0dfdf;
+  	border-bottom: 1px solid #fcfcfc;
+}
+header {
+	background-color: #EDEDEB;
+	border-bottom: 0;
+	.navbar, 
+	.navbar-inner, 
+	.nav,
+	.navbar-inverse {
+		float: right;
+		background: $background-color !important;
+		filter: none !important;
+		border: none;
+		-webkit-box-shadow: none;
+	       -moz-box-shadow: none;
+	            box-shadow: none;
+		padding: 0px;
+		margin: 0;
+
+	}
+
+}
+
 .btn-small {
 	webkit-border-radius: 14px;
      -moz-border-radius: 14px;
@@ -33,46 +58,54 @@ hr.clean {
 /* Logos */
 
 .logo ,.small-logo{
-    background-color: #f73b3b;
-    border-radius: 65px;
-    -moz-border-radius: 65px;
-    -webkit-border-radius: 65px;
+    
+    
    /* transform:rotate(-27deg);
 		-ms-transform:rotate(-27deg); /* IE 9 */
 		/*-moz-transform:rotate(-27deg);  Firefox 
 		-webkit-transform:rotate(-27deg); /* Safari and Chrome */
 		/*-o-transform:rotate(-27deg); /* Opera */
-    color: #fff;
-    font-family: 'Lobster', cursive;
-    font-size: 30px;
-    height: 110px;
-    line-height: 110px;
-    margin: 0 auto;
-    text-align: center;
-    width: 110px;
+    
+    
+    
+    
 
 
 }
 
 .small-logo {
+			border-radius: 65px;
+    -moz-border-radius: 65px;
+    -webkit-border-radius: 65px;
     	background-color: #ea6030;
-    	height: 90px;
-	    line-height: 90px;
-	    width: 90px;
+    	height: 110px;
+	    line-height: 110px;
+	    margin: 0 auto;
+    	text-align: center;
+	    width: 110px;
+	    font-family: 'Lobster';
 	    font-size: 25px;
 	    border: 5px solid #F6F6F6;
+	    color: #eee;
 	    i {
 	    	display: block;
 	    	color: #eee;
 	    }
 }
 
+
+/*Main Navbar*/
+/*.navbar .nav > li > a */
+
+
+
 .wrapper-logo-feed {
-	width: 200px;
+	width: 135px;
 	background-color: $background-color;
 	margin:0 auto;
 	position: relative;
-	top: -4.5em;
+	top: -8.5em;
+	/*border: solid 1px;*/
 	.logo-feed {
 		
 	}
@@ -86,15 +119,77 @@ hr.clean {
 
 }
 
-
+.logo-framework {
+	position: absolute;
+	width: 100%;
+}
 .wrapper-hr{
-	
-	.header-hr {
-		margin:60px 0 !important;
-		
+
+	position: relative;
+	margin: 70px 0;
+	.left-corner, .right-corner {
+		position: absolute;
+		top: 40px;
+		border:solid 1px #D4D4D4;
+		height: 40px;
+		width: 8px;
+		background-color: #EDEDEB;
+
+	}
+	.left-corner {
+		left: -9px;
+		-moz-border-radius-bottomleft: 15px 35px;
+		-moz-border-radius-topleft: 15px 35px;
+		border-bottom-left-radius: 15px 35px;
+		border-top-left-radius: 15px 35px;
+		border-right:0;
+	}
+	.right-corner {
+		left: 134px;
+		-moz-border-radius-bottomright: 15px 35px;
+		-moz-border-radius-topright: 15px 35px;
+		border-bottom-right-radius: 15px 35px;
+		border-top-right-radius: 15px 35px;
+		border-left: 0;
 		
 	}
+	.dropdown-menu {
+		width: 500px;
+		span {
+			float: left;
+		}
+	}
+
+	.nav {
+		li {
+			position: relative;
+		}
+	}
+
+.dropdown-menu  a:hover,
+.dropdown-menu  a:focus,
+.dropdown-submenu:hover > a {
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #0088cc;
+  background-color: #0081c2;
+  background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
+  background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
+  background-image: -o-linear-gradient(top, #0088cc, #0077b3);
+  background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+  background-repeat: repeat-x;
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
 }
+
+	/*.navbar-inner {
+		border-radius: 65px;
+    -moz-border-radius: 65px;
+    -webkit-border-radius: 65px;
+	}*/
+}
+
+
 
 
 #wrapper {
@@ -245,25 +340,33 @@ hr.clean {
 			box-shadow: inset 0 -70px 70px -20px rgba(0, 0, 0, 0.65);*/
 			.title-container {
 				position: absolute;
+				top: 10px;
 				width: 100%;
-				height: 100%;
 				div.story-title {
-					position: absolute;
-					padding-left: 20px;
-					/*background-color: rgba(0, 0, 0, 0.35);*/
-					width: 100%;
-					top: -26px;
+					width:270px;
+					text-align: center;
+					margin: 0 auto;
+					background-color: rgba(0, 0, 0, 0.35);
+					color: #eee;
+					/*top: -26px;
 					height: 28px;
 					line-height: 28px;
 					webkit-box-shadow: inset 0 -70px 70px -20px rgba(0, 0, 0, 0.65);
 					-moz-box-shadow: inset 0 -70px 70px -20px rgba(0,0,0,0.65);
-					box-shadow: inset 0 -70px 70px -20px rgba(0, 0, 0, 0.65);
+					box-shadow: inset 0 -70px 70px -20px rgba(0, 0, 0, 0.65);*/
 
 					a{
+						display: inline-block;
+						border-bottom: solid 1px;
+						padding: 5px 0;
 						font-family: $story-font;
 						font-style: italic;
-						font-size: 15px;
+						font-size: 20px;
 						color: #eee;
+					}
+
+					div	{
+
 					}
 				}
 			}
