--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title><%= full_title(yield(:title)) %></title>
-    <%= display_meta_tags :site => 'FeedFiction'%>
+    
+    <%= display_meta_tags :site => full_title(yield(:title))%>
     <%= stylesheet_link_tag "application", media: "all" %>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Serif">
