--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -9,10 +9,9 @@
 	<div class="started-by">
 		<h2>The Feeders:</h2>
 		<%= render 'stories/big_feeders' ,story: @story%>
-		<h2>Present:</h2>
-		<div class="header-hr">
-			<h1><%=@story.story_title%></h1>
-		</div>
+		<h2><%= @story.story_lines.map {|l| l.user}.uniq.size >1 ? 'Present:' : 'Presents' %></h2>
+		
+		<%= render 'layouts/title_hr' , :@hr_name => @story.story_title%>
 
 
 	</div>
