--- a/app/views/users/_follow_form_header.html.erb
+++ b/app/views/users/_follow_form_header.html.erb
@@ -2,13 +2,13 @@
 	<% if current_user.following?(@user) %>
     <%= form_for(current_user.relationships.find_by_followed_id(@user), html: { method: :delete }, remote: true) do |f| %>
     	<input type="hidden" name="is_header" value="true"/>
-	  <%= f.submit "Following", class: "btn btn-large btn-warning btn-following" %>
+	  <%= f.submit "Following", class: "btn btn-warning btn-following" %>
 		<% end %>
   <% else %>
     <%= form_for(current_user.relationships.build(followed_id: @user.id), remote: true) do |f| %>
 	  <%= f.hidden_field :followed_id %>
 	  <input type="hidden" name="is_header" value="true"/>
-	  <%= f.submit "Follow", class: "btn btn-large btn-danger" %>
+	  <%= f.submit "Follow", class: "btn btn-danger" %>
 		<% end %>
 	<% end %>
 <% end %>
