--- a/app/views/feeds/index.js.erb
+++ b/app/views/feeds/index.js.erb
@@ -1,4 +1,4 @@
-$('#tiles').append("<%= escape_javascript(render(:partial => 'stories/story' , :collection => @stories))%>")
+$('#portfolio-wrapper').append("<%= escape_javascript(render(:partial => 'stories/story' , :collection => @stories))%>")
 <% if @stories.next_page %>
 $('.pagination').replaceWith('<%= j will_paginate(@stories) %>');
 <% else %>
