--- a/app/views/users/_user_header.html.erb
+++ b/app/views/users/_user_header.html.erb
@@ -10,8 +10,8 @@
       <div class="navbar-inner">
         
         <ul class="nav">
-          <li><a href="<%=user_url(@user)%>">stories:<%= @user.participate_stories.count%></a></li>
-          <li><a href="<%= likes_user_url(@user)%>">Likes:<%= @user.likes.count%></a></li>
+          <li <%=@active_stories%>><a href="<%=user_url(@user)%>">stories:<%= @user.participate_stories.count%></a></li>
+          <li <%=@active_likes%>><a href="<%= likes_user_url(@user)%>">Likes:<%= @user.likes.count%></a></li>
         </ul>
        
         <ul class="nav pull-right">
@@ -19,7 +19,7 @@
          
         </ul>
      
-         <div>
+         <div class="following-wrapper">
           <%= render 'users/follow_form_header' if current_user %>
         </div>
       </div>
