--- a/app/views/stories/_start_story_modal.html.erb
+++ b/app/views/stories/_start_story_modal.html.erb
@@ -2,6 +2,11 @@
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">×</button>
                 <h3>Start A Story</h3>
+                <div class="row">
+                  <span class="span2">1. Choose your photo</span>
+                  <span class="span2">2. Choose a categoty</span>
+                  <span class="span2">3. Write your story</span>
+                </div>
               </div>
               <div class="modal-body">
                 <p>To start a story please upload image</p>
