--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,6 +10,10 @@ body {
 h2 {
 	font-size: 25px;
 }
+
+/*h3 {
+	font-family: 'Lobster' !important;
+}*/
 hr {
   	margin: 20px 0;
   	border: 0;
@@ -600,6 +604,32 @@ ul.commentlist {
 				margin: 0 auto;
 			}
 		}
+	}
+}
+
+/* Followers page */
+.followers {
+	
+	li {
+		padding: 7px 0 0 0;
+		margin-bottom: 30px;
+		height: 67px;
+		background-color: #fff;
+		-webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff2f2f2', GradientType=0);
+  *zoom: 1;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+     -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+          box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+     .span1 {
+     	display: block;
+     		margin-left: 7px;
+     }
+     .btn-follow-wrapper {
+     	margin-top: 12px;
+     }
 	}
 }
 
