--- a/app/views/users/_follow_form_wrapper.html.erb
+++ b/app/views/users/_follow_form_wrapper.html.erb
@@ -1,3 +1,3 @@
-<div class="relation-<%=@user.id%>">
+<div class="btn-follow-wrapper relation-<%=@user.id%>">
   <%= render 'users/follow_form' %>
 </div>
