--- a/app/views/users/_users_to_follow.html.erb
+++ b/app/views/users/_users_to_follow.html.erb
@@ -1,8 +1,16 @@
 	<h3><%= @title %></h3>
       <% if @users.any? %>
-        <ul class="users">
+        <ul class="followers row">
           <%= render @users %>
         </ul>
         <%= will_paginate @users%>
+      <% else %>
+      	<div class="alert">
+      		<% if @user==current_user %>
+      			<h3>You have no <%= @title.downcase %> yet!</h3> 
+      		<% else %>
+      			<h3>@user has no <%= @title.downcase %> yet!</h3> 
+      		<% end%>
+      	</div>
       <% end %>
     </div>
