--- a/app/views/users/show_likes.html.erb
+++ b/app/views/users/show_likes.html.erb
@@ -7,6 +7,12 @@
 	<h2><%= @user.name %> likes the stories:</h2>
 	<%= render 'feeds/feed' %>
 	<%else%>
-	<h2><%= @user.name %> dosen't like yet</h2>
+	<div class="alert">
+		<% if @user==current_user %>
+			<h3>You do not have like yet!</h3> 
+		<% else %>
+			<h3><%= @user.name %> dosen't has like yet</h3>
+		<% end%>
+	</div>
 	<%end%>
 </section>
