--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
     <div class="row">
      <!--start: Logo -->
       <div class="logo span3">
-        <i class="ico-tags circle"></i>
+        <i class="mini-white mini-ico-bookmark circle"></i>
 <%= link_to  content_tag(:span ,'feed') + 'fiction', root_path, id: "logo" , class: "brand" %>
 
         <!-- <a class="brand" href="#">Feed<span>fiction</span></a> -->
@@ -36,7 +36,7 @@
                       <%end%>
                       <li><a data-toggle="modal" href="#StartStoryModal">Start a story</a></li>
                       <%= render 'layouts/about_dd_menu' %>
-                      <li> <%= link_to image_tag(current_user.avatar,:class => 'image_header_avatar') , user_url(current_user)%></li>
+                      <li> <%= avatar_rounded_mini(current_user)%></li>
                        <li id="fat-menu" class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                            <b class="caret"></b>
