--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,5 @@
 $background-color :#EDEDEB;
-/*$background-header :#3f3c3c;*/
-$background-header :#EDEDEB;
+$background-header :#000;
 $story-font : 'Sanchez',serif;
 $xstory-font : 'Arbutus Slab', serif;
 
@@ -56,11 +55,24 @@ header {
 		background-color: $background-header;
 		.nav {
 			margin:0;
+			li.dropdown > .dropdown-toggle .caret {
+				margin-top: 4px;
+				border-top-color: #eee;
+  			border-bottom-color: #eee;
+			}
+			.dropdown-menu a{
+				color: #000 !important;
+			}
 		}
 		li {
 			height: 30px;
-			line-height: 10px;
+			/*line-height: 10px*/;
+			a {
+				color: #fff !important;
+			}
+
 		}
+
 
 	}
 
@@ -70,6 +82,22 @@ header {
 	webkit-border-radius: 14px;
      -moz-border-radius: 14px;
           border-radius: 14px;
+}
+
+.notify-count {
+	background-color:#F03D25;
+	border: 1px solid #D83722;
+	-webkit-border-radius:2px;
+		top:-10px;
+	color:#fff;
+	font-family: 'arial';
+	font-size:9px;
+	font-weight:bold;
+	overflow:hidden;
+	padding:0 1px 1px;
+	position:relative;
+	right:-1px;
+	display: inline-block;
 }
 
 /* Logos */
